Improved mobile navigation with overlay menu

--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
             <div class="brand-logo">
                 <h1 data-i18n="brand_name">Saveurs d'Argan</h1>
             </div>
-            <nav>
+            <div class="mobile-menu-toggle">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <nav class="nav-menu">
                 <ul>
                     <li><a href="#home" data-i18n="home">בית</a></li>
                     <li><a href="#products" data-i18n="products">מוצרים</a></li>
