--- a/index.html
+++ b/index.html
@@ -3,10 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="שמן ארגן אורגני טהור למאכל ולטיפוח - מיובא ישירות ממרוקו. יעיל להורדת כולסטרול, חיזוק המערכת החיסונית, שיפור בריאות העור והשיער. תוסף טבעי ובריא לתזונה יומיומית.">
+    <meta name="keywords" content="שמן ארגן, שמן ארגן למאכל, שמן ארגן אורגני, שמן בריא למאכל, הורדת כולסטרול, תוסף בריא, שמן ארגן טהור, שמן ארגן ממרוקו, ויטמין E טבעי, נוגדי חמצון, בריאות טבעית, שמן ארגן לבישול, שמן ארגן לעור, שמן ארגן לשיער">
+    <meta name="author" content="Saveurs d'Argan">
+    <meta name="robots" content="index, follow">
+    <title data-i18n="title">שמן ארגן אורגני טהור למאכל | Saveurs d'Argan - שמן בריא להורדת כולסטרול</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Great+Vibes&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <title data-i18n="title">Saveurs d'Argan - שמן ארגן קולינרי</title>
+    <!-- Open Graph meta tags for social sharing -->
+    <meta property="og:title" content="שמן ארגן אורגני טהור למאכל | Saveurs d'Argan">
+    <meta property="og:description" content="שמן ארגן אורגני טהור למאכל ולטיפוח - מיובא ישירות ממרוקו. יעיל להורדת כולסטרול, חיזוק המערכת החיסונית, שיפור בריאות העור והשיער.">
+    <meta property="og:image" content="images/argan-oil-bottle.svg">
+    <meta property="og:url" content="https://yael-argan.com">
+    <meta property="og:type" content="website">
+    
+    <!-- JSON-LD structured data for rich search results -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Product",
+        "name": "שמן ארגן אורגני טהור למאכל",
+        "image": "images/argan-oil-bottle.svg",
+        "description": "שמן ארגן אורגני טהור למאכל ולטיפוח - מיובא ישירות ממרוקו. יעיל להורדת כולסטרול, חיזוק המערכת החיסונית, שיפור בריאות העור והשיער.",
+        "brand": {
+            "@type": "Brand",
+            "name": "Saveurs d'Argan"
+        },
+        "offers": {
+            "@type": "Offer",
+            "priceCurrency": "ILS",
+            "availability": "https://schema.org/InStock"
+        },
+        "aggregateRating": {
+            "@type": "AggregateRating",
+            "ratingValue": "4.8",
+            "reviewCount": "150"
+        }
+    }
+    </script>
 </head>
 <body>
     <div class="promotion-banner">
@@ -83,53 +118,28 @@
         </div>
     </section>
 
-    <section id="argan-info" class="argan-info-section">
+    <section id="argan-info" class="section">
         <div class="section-content">
-            <h2 class="section-title" data-i18n="argan_info_title">שמן הארגן הקולינרי - "הזהב הנוזלי של מרוקו"</h2>
-            <div class="argan-info-grid">
-                <div class="info-text">
-                    <div class="info-block">
-                        <h3 data-i18n="heritage_title">מורשת עתיקה של טעם וסגולות</h3>
-                        <p data-i18n="heritage_desc">שמן הארגן הקולינרי, המכונה גם "הזהב הנוזלי" או "הזהב הלבן של מרוקו", הוא אחד השמנים היקרים והנדירים בעולם. מופק מגלעיני עץ הארגן הגדל באופן בלעדי באזור דרום-מערב מרוקו, אזור המוכר על ידי אונסק"ו כשמורה ביוספרית.</p>
-                    </div>
+            <h2 class="section-title" data-i18n="argan_info_title">על שמן ארגן</h2>
+            <div class="about-grid">
+                <div class="about-text">
+                    <h3>שמן ארגן טהור - אוצר הטבע ממרוקו</h3>
+                    <p>שמן הארגן שלנו, המיובא ישירות ממרוקו, הוא אחד התוספים הבריאים ביותר הקיימים בטבע. עשיר בוויטמין E, חומצות שומן חיוניות ונוגדי חמצון, שמן הארגן ידוע ביכולתו להוריד רמות כולסטרול, לחזק את המערכת החיסונית ולשפר את בריאות העור והשיער.</p>
                     
-                    <div class="info-block">
-                        <h3 data-i18n="taste_title">טעם ייחודי ועשיר</h3>
-                        <p data-i18n="taste_desc">לשמן הארגן הקולינרי טעם אגוזי עדין ומיוחד, עם נגיעות קלות של פירותיות. הטעם העשיר והמורכב שלו הופך אותו לתוספת מושלמת למגוון רחב של מאכלים, החל מסלטים ועד לתבשילים מורכבים. איכותו הגבוהה והטעם הייחודי שלו זיכו אותו במקום של כבוד במטבחים של שפים מובילים במסעדות מישלן ברחבי העולם, המשתמשים בו ליצירת מנות גורמה יוקרתיות ולהעצמת טעמים.</p>
-                    </div>
+                    <h4>היתרונות הבריאותיים של שמן ארגן:</h4>
+                    <ul>
+                        <li>הורדת רמות כולסטרול</li>
+                        <li>חיזוק המערכת החיסונית</li>
+                        <li>מקור עשיר לוויטמין E ונוגדי חמצון</li>
+                        <li>שיפור בריאות העור והשיער</li>
+                        <li>תוסף טבעי ובריא לתזונה יומיומית</li>
+                    </ul>
 
-                    <div class="info-block">
-                        <h3 data-i18n="process_title">תהליך הפקה מסורתי</h3>
-                        <p data-i18n="process_desc">הפקת השמן נעשית בתהליך מסורתי עדין, שבו הגלעינים נקלים תחילה כדי להעצים את הטעם האגוזי. תהליך זה, יחד עם הנדירות של עצי הארגן והעבודה האינטנסיבית הנדרשת להפקת השמן, הופכים אותו לאחד השמנים היקרים בעולם.</p>
-                    </div>
-
-                    <div class="info-block">
-                        <h3 data-i18n="health_benefits_title">יתרונות בריאותיים מוכחים</h3>
-                        <ul class="benefits-detailed-list">
-                            <li data-i18n="health_benefits.1">עשיר בחומצות שומן חיוניות אומגה 6 ואומגה 9</li>
-                            <li data-i18n="health_benefits.2">מכיל ויטמין E בריכוז גבוה במיוחד</li>
-                            <li data-i18n="health_benefits.3">מקור עשיר לנוגדי חמצון טבעיים</li>
-                            <li data-i18n="health_benefits.4">תורם לבריאות הלב וכלי הדם</li>
-                            <li data-i18n="health_benefits.5">מסייע בהורדת רמות כולסטרול</li>
-                            <li data-i18n="health_benefits.6">בעל תכונות אנטי-דלקתיות</li>
-                        </ul>
-                    </div>
-
-                    <div class="info-block">
-                        <h3 data-i18n="culinary_uses_title">שימושים קולינריים</h3>
-                        <p data-i18n="culinary_uses_intro">השמן מושלם ל:</p>
-                        <ul class="culinary-uses-list">
-                            <li data-i18n="culinary_uses.1">תיבול סלטים טריים</li>
-                            <li data-i18n="culinary_uses.2">טפטוף על מנות מוגמרות</li>
-                            <li data-i18n="culinary_uses.3">שדרוג מאפים וקינוחים</li>
-                            <li data-i18n="culinary_uses.4">תוספת לרטבים ומרינדות</li>
-                            <li data-i18n="culinary_uses.5">שילוב במנות דגים ובשר</li>
-                        </ul>
-                    </div>
+                    <h4>איך להשתמש בשמן ארגן למאכל?</h4>
+                    <p>ניתן להוסיף את שמן הארגן לסלטים, מרקים, או לצרוך כתוסף תזונה יומי. כפית אחת ביום מספיקה כדי ליהנות מכל היתרונות הבריאותיים.</p>
                 </div>
-                <div class="info-image">
-                    <img src="images/products/bottle.jpeg" alt="שמן ארגן איכותי" class="process-image">
-                    <div class="image-caption" data-i18n="image_caption">שמן ארגן קולינרי משובח</div>
+                <div class="about-image">
+                    <img src="images/argan-trees-hero.svg" alt="עצי ארגן במרוקו - מקור השמן הטהור" loading="lazy">
                 </div>
             </div>
         </div>
