--- a/index.html
+++ b/index.html
@@ -3,42 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="שמן ארגן אורגני טהור למאכל ולטיפוח - מיובא ישירות ממרוקו. יעיל להורדת כולסטרול, חיזוק המערכת החיסונית, שיפור בריאות העור והשיער. תוסף טבעי ובריא לתזונה יומיומית.">
-    <meta name="keywords" content="שמן ארגן, שמן ארגן למאכל, שמן ארגן אורגני, שמן בריא למאכל, הורדת כולסטרול, תוסף בריא, שמן ארגן טהור, שמן ארגן ממרוקו, ויטמין E טבעי, נוגדי חמצון, בריאות טבעית, שמן ארגן לבישול, שמן ארגן לעור, שמן ארגן לשיער">
-    <meta name="author" content="Saveurs d'Argan">
+    <meta name="description" content="שמן ארגן אורגני טהור למאכל - מיובא ישירות ממרוקו. Culinary Argan Oil, Moroccan Liquid Gold. יעיל להורדת כולסטרול, חיזוק המערכת החיסונית, שיפור בריאות העור והשיער. שמן ארגן קולינרי משובח - המותג המוביל בישראל.">
+    <meta name="keywords" content="שמן ארגן, שמן ארגן למאכל, שמן ארגן אורגני, שמן בריא למאכל, הורדת כולסטרול, תוסף בריא, שמן ארגן טהור, שמן ארגן ממרוקו, ויטמין E טבעי, נוגדי חמצון, בריאות טבעית, שמן ארגן לבישול, שמן ארגן לעור, שמן ארגן לשיער, Argan Oil, Culinary Argan Oil, Moroccan Argan Oil, Organic Argan Oil, Pure Argan Oil, Edible Argan Oil, Moroccan Liquid Gold, Natural Supplements, Cholesterol Reduction, Immune System Boost, שמן מרוקאי, שמן ארגן מסורתי, שמן ארגן כשר, שמן ארגן פרימיום">
+    <meta name="author" content="Saveurs d'Argan - שמן ארגן טהור">
     <meta name="robots" content="index, follow">
-    <title data-i18n="title">שמן ארגן אורגני טהור למאכל | Saveurs d'Argan - שמן בריא להורדת כולסטרול</title>
+    <title>שמן ארגן אורגני למאכל | Culinary Argan Oil | Saveurs d'Argan - שמן בריא להורדת כולסטרול</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Great+Vibes&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Open Graph meta tags for social sharing -->
-    <meta property="og:title" content="שמן ארגן אורגני טהור למאכל | Saveurs d'Argan">
-    <meta property="og:description" content="שמן ארגן אורגני טהור למאכל ולטיפוח - מיובא ישירות ממרוקו. יעיל להורדת כולסטרול, חיזוק המערכת החיסונית, שיפור בריאות העור והשיער.">
+    <meta property="og:title" content="שמן ארגן אורגני למאכל | Culinary Argan Oil | Saveurs d'Argan">
+    <meta property="og:description" content="שמן ארגן אורגני טהור למאכל - מיובא ישירות ממרוקו. Culinary Argan Oil, Moroccan Liquid Gold. יעיל להורדת כולסטרול ושיפור הבריאות.">
     <meta property="og:image" content="images/argan-oil-bottle.svg">
     <meta property="og:url" content="https://yael-argan.com">
     <meta property="og:type" content="website">
+    <meta property="og:locale" content="he_IL" />
+    <meta property="og:locale:alternate" content="en_US" />
     
     <!-- JSON-LD structured data for rich search results -->
     <script type="application/ld+json">
     {
         "@context": "https://schema.org",
         "@type": "Product",
-        "name": "שמן ארגן אורגני טהור למאכל",
+        "name": "שמן ארגן אורגני טהור למאכל - Culinary Argan Oil",
+        "alternateName": ["Moroccan Argan Oil", "שמן ארגן מרוקאי", "Liquid Gold of Morocco", "הזהב הנוזלי של מרוקו"],
         "image": "images/argan-oil-bottle.svg",
         "description": "שמן ארגן אורגני טהור למאכל ולטיפוח - מיובא ישירות ממרוקו. יעיל להורדת כולסטרול, חיזוק המערכת החיסונית, שיפור בריאות העור והשיער.",
         "brand": {
             "@type": "Brand",
-            "name": "Saveurs d'Argan"
+            "name": "Saveurs d'Argan",
+            "slogan": "The Finest Culinary Argan Oil - שמן ארגן קולינרי משובח"
         },
         "offers": {
             "@type": "Offer",
             "priceCurrency": "ILS",
-            "availability": "https://schema.org/InStock"
+            "availability": "https://schema.org/InStock",
+            "category": "Culinary Oils & Natural Supplements"
         },
         "aggregateRating": {
             "@type": "AggregateRating",
             "ratingValue": "4.8",
             "reviewCount": "150"
+        },
+        "keywords": "culinary argan oil, moroccan argan oil, organic argan oil, שמן ארגן למאכל, שמן ארגן אורגני, שמן מרוקאי מסורתי",
+        "manufacturer": {
+            "@type": "Organization",
+            "name": "Saveurs d'Argan",
+            "location": {
+                "@type": "Place",
+                "address": {
+                    "@type": "PostalAddress",
+                    "addressCountry": "IL"
+                }
+            }
         }
     }
     </script>
