--- a/index.html
+++ b/index.html
@@ -3,17 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="שמן ארגן אורגני טהור למאכל - מיובא ישירות ממרוקו. Culinary Argan Oil, Moroccan Liquid Gold. יעיל להורדת כולסטרול, חיזוק המערכת החיסונית, שיפור בריאות העור והשיער. שמן ארגן קולינרי משובח - המותג המוביל בישראל.">
-    <meta name="keywords" content="שמן ארגן, שמן ארגן למאכל, שמן ארגן אורגני, שמן בריא למאכל, הורדת כולסטרול, תוסף בריא, שמן ארגן טהור, שמן ארגן ממרוקו, ויטמין E טבעי, נוגדי חמצון, בריאות טבעית, שמן ארגן לבישול, שמן ארגן לעור, שמן ארגן לשיער, Argan Oil, Culinary Argan Oil, Moroccan Argan Oil, Organic Argan Oil, Pure Argan Oil, Edible Argan Oil, Moroccan Liquid Gold, Natural Supplements, Cholesterol Reduction, Immune System Boost, שמן מרוקאי, שמן ארגן מסורתי, שמן ארגן כשר, שמן ארגן פרימיום">
+    <meta name="description" content="שמן ארגן קולינרי איכותי מהאטלס המרוקאי. שמן טהור ומסורתי בכשרות מהודרת של הבד״ץ. הזמינו עכשיו!">
+    <meta name="keywords" content="שמן ארגן, שמן ארגן למאכל, שמן ארגן כשר, שמן ארגן קולינרי, שמן ארגן מרוקאי, ארגן אוכל">
     <meta name="author" content="Saveurs d'Argan - שמן ארגן טהור">
     <meta name="robots" content="index, follow">
-    <title>שמן ארגן אורגני למאכל | Culinary Argan Oil | Saveurs d'Argan - שמן בריא להורדת כולסטרול</title>
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Great+Vibes&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!-- Open Graph meta tags for social sharing -->
-    <meta property="og:title" content="שמן ארגן אורגני למאכל | Culinary Argan Oil | Saveurs d'Argan">
-    <meta property="og:description" content="שמן ארגן אורגני טהור למאכל - מיובא ישירות ממרוקו. Culinary Argan Oil, Moroccan Liquid Gold. יעיל להורדת כולסטרול ושיפור הבריאות.">
+    <meta property="og:title" content="שמן ארגן קולינרי כשר - Saveurs d'Argan">
+    <meta property="og:description" content="שמן ארגן קולינרי איכותי מהאטלס המרוקאי. שמן טהור ומסורתי בכשרות מהודרת של הבד״ץ">
     <meta property="og:image" content="images/argan-oil-bottle.svg">
     <meta property="og:url" content="https://yael-argan.com">
     <meta property="og:type" content="website">
@@ -25,10 +20,10 @@
     {
         "@context": "https://schema.org",
         "@type": "Product",
-        "name": "שמן ארגן אורגני טהור למאכל - Culinary Argan Oil",
+        "name": "שמן ארגן קולינרי כשר",
         "alternateName": ["Moroccan Argan Oil", "שמן ארגן מרוקאי", "Liquid Gold of Morocco", "הזהב הנוזלי של מרוקו"],
         "image": "images/argan-oil-bottle.svg",
-        "description": "שמן ארגן אורגני טהור למאכל ולטיפוח - מיובא ישירות ממרוקו. יעיל להורדת כולסטרול, חיזוק המערכת החיסונית, שיפור בריאות העור והשיער.",
+        "description": "שמן ארגן קולינרי איכותי מהאטלס המרוקאי. שמן טהור ומסורתי בכשרות מהודרת של הבד״ץ",
         "brand": {
             "@type": "Brand",
             "name": "Saveurs d'Argan",
@@ -45,7 +40,7 @@
             "ratingValue": "4.8",
             "reviewCount": "150"
         },
-        "keywords": "culinary argan oil, moroccan argan oil, organic argan oil, שמן ארגן למאכל, שמן ארגן אורגני, שמן מרוקאי מסורתי",
+        "keywords": "culinary argan oil, moroccan argan oil, kosher argan oil, שמן ארגן למאכל, שמן ארגן כשר, שמן מרוקאי מסורתי",
         "manufacturer": {
             "@type": "Organization",
             "name": "Saveurs d'Argan",
@@ -59,11 +54,12 @@
         }
     }
     </script>
+    <title>שמן ארגן קולינרי כשר - Saveurs d'Argan</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Great+Vibes&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-    <div class="promotion-banner">
-        <span class="promo-text" data-i18n="promo_delivery">🚚 משלוח חינם בקנייה מעל ₪299</span>
-    </div>
     <div class="bsd">בס״ד</div>
     <div class="language-selector">
         <button onclick="changeLanguage('he')" class="lang-btn active">🇮🇱 עברית</button>
