--- a/index.html
+++ b/index.html
@@ -3,58 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="שמן ארגן קולינרי איכותי מהאטלס המרוקאי. שמן טהור ומסורתי בכשרות מהודרת של הבד״ץ. הזמינו עכשיו!">
-    <meta name="keywords" content="שמן ארגן, שמן ארגן למאכל, שמן ארגן כשר, שמן ארגן קולינרי, שמן ארגן מרוקאי, ארגן אוכל">
-    <meta name="author" content="Saveurs d'Argan - שמן ארגן טהור">
-    <meta name="robots" content="index, follow">
-    <meta property="og:title" content="שמן ארגן קולינרי כשר - Saveurs d'Argan">
-    <meta property="og:description" content="שמן ארגן קולינרי איכותי מהאטלס המרוקאי. שמן טהור ומסורתי בכשרות מהודרת של הבד״ץ">
-    <meta property="og:image" content="images/argan-oil-bottle.svg">
-    <meta property="og:url" content="https://yael-argan.com">
+    <meta name="description" content="שמן ארגן קולינרי איכותי בכשרות בד״ץ - מיובא ישירות מהאטלס המרוקאי. שמן טהור ומסורתי בכשרות מהודרת. משלוח חינם בקנייה מעל 299 ש״ח">
+    <meta name="keywords" content="שמן ארגן, שמן ארגן למאכל, שמן ארגן כשר, שמן ארגן קולינרי, שמן ארגן מרוקאי, ארגן אוכל, שמן ארגן בדץ, שמן ארגן בכשרות בדץ">
+    <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large">
+    <meta property="og:title" content="שמן ארגן קולינרי בכשרות בד״ץ | Argans - שמן ארגן למאכל">
+    <meta property="og:description" content="שמן ארגן קולינרי איכותי בכשרות בד״ץ - מיובא ישירות מהאטלס המרוקאי. שמן טהור ומסורתי בכשרות מהודרת">
     <meta property="og:type" content="website">
-    <meta property="og:locale" content="he_IL" />
-    <meta property="og:locale:alternate" content="en_US" />
+    <meta property="og:url" content="https://argans.co.il">
+    <meta property="og:image" content="https://argans.co.il/images/argan-oil-bottle.svg">
+    <meta property="og:site_name" content="Argans - שמן ארגן קולינרי">
+    <meta property="og:locale" content="he_IL">
+    <meta name="twitter:card" content="summary_large_image">
+    <link rel="canonical" href="https://argans.co.il">
     
-    <!-- JSON-LD structured data for rich search results -->
     <script type="application/ld+json">
     {
         "@context": "https://schema.org",
         "@type": "Product",
-        "name": "שמן ארגן קולינרי כשר",
-        "alternateName": ["Moroccan Argan Oil", "שמן ארגן מרוקאי", "Liquid Gold of Morocco", "הזהב הנוזלי של מרוקו"],
-        "image": "images/argan-oil-bottle.svg",
-        "description": "שמן ארגן קולינרי איכותי מהאטלס המרוקאי. שמן טהור ומסורתי בכשרות מהודרת של הבד״ץ",
+        "name": "שמן ארגן קולינרי בכשרות בד״ץ",
+        "alternateName": ["שמן ארגן מרוקאי", "הזהב הנוזלי של מרוקו", "Moroccan Argan Oil"],
+        "image": "https://argans.co.il/images/argan-oil-bottle.svg",
+        "description": "שמן ארגן קולינרי איכותי בכשרות בד״ץ מהאטלס המרוקאי. שמן טהור ומסורתי המיוצר בתהליך מסורתי",
         "brand": {
             "@type": "Brand",
-            "name": "Saveurs d'Argan",
-            "slogan": "The Finest Culinary Argan Oil - שמן ארגן קולינרי משובח"
+            "name": "Argans",
+            "logo": "https://argans.co.il/images/logo.svg"
         },
         "offers": {
             "@type": "Offer",
+            "url": "https://argans.co.il",
             "priceCurrency": "ILS",
-            "availability": "https://schema.org/InStock",
-            "category": "Culinary Oils & Natural Supplements"
+            "price": "219",
+            "availability": "https://schema.org/InStock"
         },
         "aggregateRating": {
             "@type": "AggregateRating",
             "ratingValue": "4.8",
             "reviewCount": "150"
         },
-        "keywords": "culinary argan oil, moroccan argan oil, kosher argan oil, שמן ארגן למאכל, שמן ארגן כשר, שמן מרוקאי מסורתי",
+        "keywords": "שמן ארגן למאכל, שמן ארגן כשר, שמן ארגן בדץ, שמן מרוקאי מסורתי",
         "manufacturer": {
             "@type": "Organization",
-            "name": "Saveurs d'Argan",
-            "location": {
-                "@type": "Place",
-                "address": {
-                    "@type": "PostalAddress",
-                    "addressCountry": "IL"
-                }
-            }
+            "name": "Argans",
+            "url": "https://argans.co.il"
+        },
+        "category": "מוצרי מזון אורגניים",
+        "countryOfOrigin": {
+            "@type": "Country",
+            "name": "Morocco"
         }
     }
     </script>
-    <title>שמן ארגן קולינרי כשר - Saveurs d'Argan</title>
+    
+    <title>שמן ארגן קולינרי בכשרות בד״ץ | Argans - שמן ארגן למאכל</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Great+Vibes&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
