add certification of kashrut
Signed-off-by: YaelPeles <leepeles@gmail.com>

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="description" content="שמן ארגן קולינרי איכותי בכשרות בד״ץ - מיובא ישירות מהאטלס המרוקאי. שמן טהור ומסורתי בכשרות מהודרת. משלוח חינם בקנייה מעל 299 ש״ח">
     <meta name="keywords" content="שמן ארגן, שמן ארגן למאכל, שמן ארגן כשר, שמן ארגן קולינרי, שמן ארגן מרוקאי, ארגן אוכל, שמן ארגן בדץ, שמן ארגן בכשרות בדץ">
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large">
-    <meta property="og:title" content="שמן ארגן קולינרי בכשרות בד״ץ | Argans - שמן ארגן למאכל">
+    <meta property="og:title" content="שמן ארגן למאכל בכשרות בד״ץ | Argans - שמן ארגן למאכל">
     <meta property="og:description" content="שמן ארגן קולינרי איכותי בכשרות בד״ץ - מיובא ישירות מהאטלס המרוקאי. שמן טהור ומסורתי בכשרות מהודרת">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://argans.co.il">
     <meta property="og:image" content="https://argans.co.il/images/argan-oil-bottle.svg">
-    <meta property="og:site_name" content="Argans - שמן ארגן קולינרי">
+    <meta property="og:site_name" content="Argans - שמן ארגן למאכל">
     <meta property="og:locale" content="he_IL">
     <meta name="twitter:card" content="summary_large_image">
     <link rel="canonical" href="https://argans.co.il">
@@ -20,10 +20,10 @@
     {
         "@context": "https://schema.org",
         "@type": "Product",
-        "name": "שמן ארגן קולינרי בכשרות בד״ץ",
+        "name": "שמן ארגן למאכל בכשרות בד״ץ",
         "alternateName": ["שמן ארגן מרוקאי", "הזהב הנוזלי של מרוקו", "Moroccan Argan Oil"],
         "image": "https://argans.co.il/images/argan-oil-bottle.svg",
-        "description": "שמן ארגן קולינרי איכותי בכשרות בד״ץ מהאטלס המרוקאי. שמן טהור ומסורתי המיוצר בתהליך מסורתי",
+        "description": "שמן ארגן למאכל איכותי בכשרות מהודרת. שמן טהור ומסורתי המיוצר בתהליך מסורתי",
         "brand": {
             "@type": "Brand",
             "name": "Argans",
@@ -55,7 +55,7 @@
     }
     </script>
     
-    <title>שמן ארגן קולינרי בכשרות בד״ץ | Argans - שמן ארגן למאכל</title>
+    <title>שמן ארגן למאכל בכשרות בד״ץ | Argans - שמן ארגן למאכל</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Great+Vibes&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -193,7 +193,10 @@
                     <div class="product-image-container">
                         <div class="product-badges">
                             <div class="product-badge" data-i18n="product_badge">100% טבעי</div>
-                            <div class="product-badge" data-i18n="kosher_badge">כשר</div>
+                            <div class="product-badge kosher-badge">
+                                <span data-i18n="kosher_badge">כשר בהשגחת הבד״ץ</span>
+                                <a href="images/files/kashrut.pdf" target="_blank" class="cert-link" data-i18n="kosher_cert_link">לצפייה בתעודת הכשרות</a>
+                            </div>
                         </div>
                         <img src="images/products/bottle.jpeg" alt="Culinary Argan Oil" class="product-image">
                     </div>
