--- a/index.html
+++ b/index.html
@@ -10,11 +10,31 @@
     <meta property="og:description" content="שמן ארגן למאכל איכותי בכשרות בד״ץ - מיובא ישירות מהאטלס המרוקאי. שמן טהור ומסורתי בכשרות מהודרת">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://argans.co.il">
-    <meta property="og:image" content="https://argans.co.il/images/argan-oil-bottle.svg">
+    <meta property="og:image" content="https://argans.co.il/images/logo.jpeg">
+    <meta property="og:image:type" content="image/jpeg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
     <meta property="og:site_name" content="Argans - שמן ארגן למאכל">
     <meta property="og:locale" content="he_IL">
     <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:image" content="https://argans.co.il/images/logo.jpeg">
     <link rel="canonical" href="https://argans.co.il">
+    
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Argans - שמן ארגן למאכל",
+        "url": "https://argans.co.il",
+        "logo": "https://argans.co.il/images/logo.jpeg",
+        "image": "https://argans.co.il/images/logo.jpeg",
+        "description": "שמן ארגן למאכל איכותי בכשרות בד״ץ - מיובא ישירות מהאטלס המרוקאי",
+        "sameAs": [
+            "https://www.facebook.com/argans.co.il",
+            "https://www.instagram.com/argans.co.il"
+        ]
+    }
+    </script>
     
     <script type="application/ld+json">
     {
