--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="description" content="שמן ארגן למאכל איכותי בכשרות בד״ץ - מיובא ישירות מהאטלס המרוקאי. שמן טהור ומסורתי בכשרות מהודרת. משלוח חינם בקנייה מעל 299 ש״ח">
     <meta name="keywords" content="שמן ארגן, שמן ארגן למאכל, שמן ארגן כשר, שמן ארגן מרוקאי, ארגן אוכל, שמן ארגן בדץ, שמן ארגן בכשרות בדץ">
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large">
-    <meta property="og:title" content="שמן ארגן למאכל בכשרות בד״ץ | Argans - שמן ארגן למאכל">
-    <meta property="og:description" content="שמן ארגן למאכל איכותי בכשרות בד״ץ - מיובא ישירות מהאטלס המרוקאי. שמן טהור ומסורתי בכשרות מהודרת">
+    <meta property="og:title" content="שמן ארגן למאכל | Argans - שמן ארגן למאכל">
+    <meta property="og:description" content="שמן ארגן למאכל.מיוצר באיכות פרימיום בכשרות הבד״ץ. שמן טהור ומסורתי בכשרות מהודרת">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://argans.co.il">
     <meta property="og:image" content="https://argans.co.il/images/logo.jpeg">
