add delivery info
Signed-off-by: YaelPeles <leepeles@gmail.com>

--- a/index.html
+++ b/index.html
@@ -329,34 +329,14 @@
 
     <section id="delivery" class="delivery-section">
         <div class="section-content">
-            <h2 class="section-title" data-i18n="delivery_title">מידע על משלוחים ואיסוף עצמי</h2>
+            <h2 class="section-title" data-i18n="delivery_title">מידע על הזמנות</h2>
             <div class="delivery-info">
-                <div class="pickup-locations">
-                    <h3 class="pickup-title" data-i18n="delivery_subtitle">נקודות איסוף עצמי</h3>
-                    <div class="locations-list">
-                        <div class="location-item">
-                            <span class="material-icons">location_on</span>
-                            <span data-i18n-list="pickup_locations" data-index="0">ירושלים</span>
-                        </div>
-                        <div class="location-item">
-                            <span class="material-icons">location_on</span>
-                            <span data-i18n-list="pickup_locations" data-index="1">הרצליה</span>
-                        </div>
-                        <div class="location-item">
-                            <span class="material-icons">location_on</span>
-                            <span data-i18n-list="pickup_locations" data-index="2">פתח תקווה</span>
-                        </div>
-                        <div class="location-item">
-                            <span class="material-icons">location_on</span>
-                            <span data-i18n-list="pickup_locations" data-index="3">תל אביב</span>
-                        </div>
-                    </div>
-                    <p class="pickup-note">
-                        <span class="material-icons">phone</span>
-                        <span data-i18n="delivery_note">יש לתאם טלפונית לפני הגעה</span>
-                    </p>
-                    <p class="coming-soon-note" data-i18n="delivery_coming_soon">* תקנון משלוחים מלא יתווסף בקרוב</p>
-                </div>
+                <p class="delivery-text">כרגע האתר תומך בהזמנות טלפוניות בלבד</p>
+                <p class="phone-number">
+                    <span class="material-icons">phone</span>
+                    053-6111959
+                </p>
+                <p class="delivery-text">צרו קשר או השאירו הודעה</p>
             </div>
         </div>
     </section>
