--- a/index.html
+++ b/index.html
@@ -361,12 +361,11 @@
     <!-- Load dependencies first -->
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script src="translations.js"></script>
-    <script src="paypal-config.js"></script>
     
     <!-- Load PayPal SDK before payment.js -->
     <script>
-        // Get PayPal client ID from environment or use sandbox for development
-        const paypalClientId = window.PAYPAL_CLIENT_ID || 'AdNnm8L-kyOWzawRyF55lg0ZCwJJzMR715IZ7ymcocNqQsIXZB2SzXzEorkeN0yA2JiEyftA5_IT0R3u';
+        // PayPal configuration
+        const paypalClientId = 'AfuKCnrXcLapPBD00AsGHaKMDRbXBKHr9ZR72t2gzE0LkKee0-p2ReRVSdiJW3eSQSkCsFrzL1O5WYRv';
         
         // Dynamically create PayPal script
         const paypalScript = document.createElement('script');
