--- a/index.html
+++ b/index.html
@@ -364,8 +364,8 @@
     
     <!-- Load PayPal SDK before payment.js -->
     <script>
-        // PayPal configuration
-        const paypalClientId = 'AfuKCnrXcLapPBD00AsGHaKMDRbXBKHr9ZR72t2gzE0LkKee0-p2ReRVSdiJW3eSQSkCsFrzL1O5WYRv';
+        // PayPal configuration - injected during deployment
+        const paypalClientId = '%%PAYPAL_CLIENT_ID%%';
         
         // Dynamically create PayPal script
         const paypalScript = document.createElement('script');
