--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
     <script>
         const paypalClientId = 'AfuKCnrXcLapPBD00AsGHaKMDRbXBKHr9ZR72t2gzE0LkKee0-p2ReRVSdiJW3eSQSkCsFrzL1O5WYRv';
         const paypalScript = document.createElement('script');
-        paypalScript.src = `https://www.paypal.com/sdk/js?client-id=${paypalClientId}&currency=ILS&locale=he_IL`;
+        paypalScript.src = `https://www.paypal.com/sdk/js?client-id=${paypalClientId}&currency=ILS&locale=he_IL&enable-funding=card,credit`;
         document.head.appendChild(paypalScript);
     </script>
     
