deploy: d39d860d6e44f19c5e21b37d2932abb506da1393

--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
                                 <a href="images/files/kashrut.pdf" target="_blank" class="cert-link" data-i18n="kosher_cert_link">לצפייה בתעודת הכשרות</a>
                             </div>
                         </div>
-                        <img src="images/products/bottle.jpeg" alt="Culinary Argan Oil" class="product-image">
+                        <img src="images/bb.jpeg" alt="Culinary Argan Oil" class="product-image">
                     </div>
                     
                     <div class="product-info">
