--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <title>שמן ארגן בכבישה קרה למאכל | Argans - שמן ארגן אורגני בכבישה קרה בכשרות בד״ץ</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="שמן ארגן בכבישה קרה למאכל איכותי בכשרות בד״ץ - מיובא ישירות מהאטלס המרוקאי. שמן טהור ומסורתי בתהליך כבישה קרה בכשרות מהודרת. משלוח חינם בקנייה מעל 299 ש״ח">
+    <meta name="description" content="שמן ארגן בכבישה קרה למאכל - 100% טבעי ואורגני בכשרות בד״ץ. בקבוק 250 מ"ל במחיר 219 ש"ח. תהליך כבישה קרה מסורתי השומר על הוויטמינים ונוגדי החמצון. משלוח חינם בקנייה מעל 299 ש״ח">
     <meta name="keywords" content="שמן ארגן בכבישה קרה, שמן ארגן, שמן ארגן למאכל, שמן ארגן כשר, שמן ארגן מרוקאי, ארגן אוכל, שמן ארגן בדץ, שמן ארגן בכשרות בדץ, כבישה קרה, שמן ארגן אורגני">
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large">
     <meta property="og:title" content="שמן ארגן בכבישה קרה למאכל | Argans - שמן ארגן אורגני בכבישה קרה">
-    <meta property="og:description" content="שמן ארגן בכבישה קרה למאכל. מיוצר באיכות פרימיום בתהליך כבישה קרה בכשרות הבד״ץ. שמן טהור, אורגני ומסורתי בכשרות מהודרת">
+    <meta property="og:description" content="שמן ארגן בכבישה קרה למאכל - 100% טבעי ואורגני בכשרות בד״ץ. בקבוק 250 מ"ל במחיר 219 ש"ח. תהליך כבישה קרה מסורתי השומר על הוויטמינים ונוגדי החמצון">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://argans.co.il">
     <meta property="og:image" content="https://argans.co.il/images/bb.jpeg">
@@ -28,6 +28,11 @@
     <meta property="og:locale" content="he_IL">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:image" content="https://argans.co.il/images/bb.jpeg">
+    
+    <!-- Additional image metadata for Google search results -->
+    <meta itemprop="image" content="https://argans.co.il/images/bb.jpeg">
+    <meta name="thumbnail" content="https://argans.co.il/images/bb.jpeg">
+    <link rel="image_src" href="https://argans.co.il/images/bb.jpeg">
     <link rel="canonical" href="https://argans.co.il">
     <link rel="manifest" href="/manifest.json">
     
@@ -42,8 +47,12 @@
       "@context": "https://schema.org/",
       "@type": "Product",
       "name": "שמן ארגן בכבישה קרה למאכל",
-      "image": "https://argans.co.il/images/bb.jpeg",
+      "image": [
+        "https://argans.co.il/images/bb.jpeg"
+      ],
       "description": "250 מ\"ל של שמן ארגן בכבישה קרה למאכל, 100% טהור ואורגני בכשרות מהודרת. מיוצר בתהליך כבישה קרה מסורתי תוך שמירה על איכות ללא פשרות.",
+      "sku": "52971",
+      "mpn": "1",
       "brand": {
         "@type": "Brand",
         "name": "Argans"
@@ -53,6 +62,8 @@
         "url": "https://argans.co.il",
         "priceCurrency": "ILS",
         "price": "219",
+        "priceValidUntil": "2026-12-31",
+        "itemCondition": "https://schema.org/NewCondition",
         "availability": "https://schema.org/InStock"
       }
     }
@@ -396,7 +407,7 @@
         </div>
         <div class="hero-content">
             <h1 class="hero-title" data-i18n="hero_title">שמן ארגן למאכל</h1>
-            <p class="hero-subtitle" data-i18n="hero_subtitle">טעם טהור, בריאות טבעית</p>
+            <p class="hero-subtitle" data-i18n="hero_subtitle">בכבישה קרה , 100% טבעי</p>
             <a href="#products" class="cta-button" data-i18n="learn_more">גלה עוד</a>
         </div>
     </section>
